syntax = "proto2";

import "common/module_event.proto";

package deeproute.grading_onboard;

message EventInfo {
  optional dr.common.Event event_type = 1;
  optional bool result = 2;
}

message DtaInfo {
  repeated EventInfo event_info = 1;
}

message CountInfo {
  optional int32 yield_vru_count = 1;
  optional int32 cutin_count = 2;
  optional int32 detour_count = 3;
  optional int32 lane_change_count = 4;
  optional int32 inbound_or_outbound_count = 5;
  optional int32 junction_count = 6;
  optional int32 roundabout_count = 7;
  optional int32 u_turn_count = 8;
}

message HDSingleEvent {
  optional bool active = 1;
  optional int32 count = 2;
}

message AutoTagEvent {
  enum EventType {
    SUDDEN_BRAKE = 1;                  // 点刹
    HARD_BRAKE = 2;                    // 急刹
    INBOUND_RAMP = 3;                  // 汇入
    OUTBOUND_RAMP = 4;                 // 汇出
    CUT_IN = 5;                        // cutin
    LANE_CHANGE = 6;                   // 拨杆变道
    OFF_CENTER = 7;                    // 不居中
    PASS_ROUNDABOUT = 8;               // 经过环岛
    PASS_U_TURN = 9;                   // 经过掉头区
    PASS_LEFT_WAITING_AREA = 10;       // 经过左转待转区
    PASS_RIGHT_ONLY_LANE = 11;         // 经过右转专用道
    WRONG_BRANCH = 12;                 // 岔路走错路
    PASS_CONSTRUCTION_ZONE = 13;       // 经过施工区域
  }
  optional string display_text = 1;   // 需要展示的文字信息, 比如"cutin成功"
  optional int64 timestamp = 2;       // 事件上报的时间戳, 3秒内会显示"当前", 超过3秒会显示"x秒前"
  optional EventType event_type = 3;
}

message HDEventInfo {
  optional HDSingleEvent sudden_brake_event = 1;          // 点刹
  optional HDSingleEvent hard_brake_event = 2;            // 急刹
  optional HDSingleEvent not_center_event = 3;            // 不居中
  optional HDSingleEvent wiggle_event = 4;                // 画龙
  optional HDSingleEvent on_boundary_long_time_event = 5; // 长时间压线
  optional HDSingleEvent uncrossable_boundary_event = 6;  // 压实线
}

message VisInfo {
  optional CountInfo count_info = 1;
  optional HDEventInfo hd_event_info = 2;
}

// Topic: /grading_onboard/output_info
message GradingOnboardOutputInfo {
  optional DtaInfo dta_info = 1;
  optional VisInfo vis_info = 2;
  repeated AutoTagEvent autotag_events = 3; 
}
