syntax = "proto2";

package deeproute.trip;

// Describes the json_info of "SENTRY_BAG_RECORDED" event.
message BagRecorded {
  optional string bag_name = 1;
  optional uint64 start_time = 2;
  optional uint64 end_time = 3;
}
